fix: AgentConnect button visibility

--- a/app/assets/stylesheets/france-connect-login.scss
+++ b/app/assets/stylesheets/france-connect-login.scss
@@ -7,10 +7,6 @@
   }
 }
 
-.france-connect-help-link {
-  text-align: center;
-}
-
 a.france-connect-login-button {
   display: inline-block;
   height: 60px;
